--- a/data/nginx/conf.d/v2ray.conf
+++ b/data/nginx/conf.d/v2ray.conf
@@ -1,6 +1,6 @@
 server{
     listen 80;
-    server_name your_domain;
+    server_name ixxx.ga;
 
     location /.well-known/acme-challenge/ {
        root /var/www/certbot;
@@ -13,10 +13,10 @@ server{
 
 server {
     listen 443 ssl http2 default_server;
-    server_name your_domain;
+    server_name ixxx.ga;
 
-    ssl_certificate /etc/letsencrypt/live/your_domain/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/your_domain/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/ixxx.ga/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ixxx.ga/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
