--- a/data/nginx/conf.d/v2ray.conf
+++ b/data/nginx/conf.d/v2ray.conf
@@ -12,7 +12,7 @@ server{
 }
 
 server {
-    listen 443 ssl http2 default_server;
+    listen 443 ssl default_server;
     server_name ixxx.ga;
 
     ssl_certificate /etc/letsencrypt/live/ixxx.ga/fullchain.pem;
